# open-telepresence-backend

./: .gitignore  Cargo.toml  README.md
signal_server/: Cargo.toml  http_server.rs
signal_server/src/: handler.rs  log.rs  main.rs  webrtc.rs  ws.rs
test/turn_server_client/: index.html  webrtc.js
