[package]
name = "signal_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "*"
tokio-stream = "0.1"
clap = { version = "3.2.22", features = ["derive"] }
webrtc = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nokhwa = "0.9.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "local-time", "env-filter"]}
tracing-appender = "0.2"
chrono = "0.4"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
